# zetcode

./: .gitignore  README.md  pyproject.toml
console/: current_date_time.py  date_arithmetic.py  daylight_saving.py  historic_battles.py  julian_day.py  number_of_days.py  pyqt_version.py  unix_time.py  utc_local.py  xmas.py
gui/dragdrop/: drag_button.py
gui/eventssignals/: custom_signal.py  event_object.py
gui/first_programs/: center.py  icon.py  tooltip.py
gui/layout/: absolute.py  box_layout.py  grid_layout.py  review.py
gui/menustoolbars/: check_menu.py  context_menu.py  main_window.py  submenu.py  toolbar.py
gui/painting/: bezier_curve.py  draw_text.py
gui/widgets/: calendar.py  check_box.py  progressbar.py  slider.py
gui/widgets2/: line_edit.py  pixmap.py  sid.html  splitter.py
