[tool.poetry]
name = "zetcode"
version = "0.1.0"
description = "Zetcode Tutorials"
authors = ["Anthoni Gardner <developer@anthoni.me>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
